--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-geocode": "^0.1.2",
+    "react-google-autocomplete": "^1.1.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
